<resources>
	<string name="str_filemanager">文件管理</string>
	<string name="str_movie">视频</string>
	<string name="str_music">音频</string>
	<string name="str_photo">图片</string>
	<string name="str_app">安装包</string>
	<string name="str_file">文件</string>
	<string name="str_external">外接设备</string>
	<string name="str_local">本地储存</string>
	<string name="str_share">文件共享</string>
	<string name="str_total">共</string>
	<string name="str_null">暂无</string>
	<string name="str_movienum">部视频</string>
	<string name="str_photonum">张图片</string>
	<string name="str_musicnum">首音乐</string>
	<string name="str_appnum">个安装包</string>
	<string name="str_devicenum">个设备</string>
	<string name="str_localdiskfree">可用 </string>
	<string name="str_localdisktotal">全部 </string>
	<string name="str_menu">按菜单键获取更多功能</string>
	<string name="str_newdevice">发现设备</string>
	<string name="str_nodata">暂无数据</string>
	<string name="str_nodev">暂无设备</string>
	<string name="str_noshare">暂无文件共享</string>
	<string name="str_open">打开</string>
	<string name="str_close">关闭</string>
	<string name="str_share_file">文件共享</string>
	<string name="str_confirm">确定</string>
	<string name="str_cancel">取消</string>
	<string name="str_username">用户名</string>
    <string name="str_pwd">密码</string>
	
	<string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play_tips">按菜单键获取更多功能</string>
    <string name="filenoexsit">视频文件不存在</string>
    <string name="app_name">多媒体</string>
    <string name="filename">音乐文件名称</string>
    <string name="playbutton">播放</string>
    <string name="pausebutton">暂停</string>
    <string name="resetbutton">重播</string>
    <string name="stopbutton">停止</string>
    <string name="filenoexist">文件没有发现</string>
    <string name="continues">继续</string>
    <string name="devicesname">设备</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="audiao">音频</string>
    <string name="videomenu">菜单</string>
    <string name="audiotracks">音轨</string>
    <string name="videosubtitles">字幕</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="anonymousselect">默认:</string>
    <string name="anonymous">匿名</string>
    <string name="relogin_title">登录</string>
    <string name="username_null">用户名不能为空</string>
    <string name="login_error_tip">用户名或密码错误，请重新输入</string>
    <string name="ping_error">共享网络已断开，请重新设置</string>
    <string name="password_null">密码不能为空</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="openning">正在载入中,请稍等...</string>
    <string name="login_fail_title">登录失败!</string>
    <string name="relogin_confirm_message">用户名/密码不对?</string>
    <string name="medianame">多媒体播放器</string>
    <string name="mediatip">按菜单键可呼出菜单</string>
    <string name="version_name">V:  </string>
    <string name="can_not_find_version_name">1.0.1 </string>
    <string name="tips_no_lyric">主人，歌词出去遛弯了，\r\n一时半会回不来，就让我来陪你吧~ ~</string>
    <string name="tips_click_menu_key">按菜单键获取更多功能</string>
    <string name="play_in_order">顺序播放</string>
    <string name="play_in_random_order">随机播放</string>
    <string name="singer">歌手 ： </string>
    <string name="unknown">未知</string>
    <string name="total_num">共 %s 个</string>
    <string name="menu">菜单</string>
    <string name="deleteFailed">删除失败,请稍后再试!</string>
    <!--gridview中二级菜单项-->
    <string name="sort">排序</string>
    <string name="sort_date">按日期</string>
    <string name="sort_filesize">按文件大小</string>
    <string name="sort_name">按名称</string>
    <string name="view">视图</string>
    <string name="view_list">列表</string>
    <string name="view_tile">平铺</string>
    <string name="delete">删除</string>
    <string name="play_list">播放列表</string>
    <string name="play_mode">播放模式</string>
    <string name="play_mode_in_order">顺序播放</string>
    <string name="play_mode_in_random_order">随机播放</string>
    <string name="play_mode_single_cycle">单曲循环</string>
    <string name="load_lyric">载入歌词</string>
    <string name="adjust_lyric">调整歌词</string>
    <string name="forward_seconds">提前 0.2s</string>
    <string name="delay_seconds">推迟 0.2s</string>
    <!-- 文件共享 -->
    <string name="net_name">网络：</string>
    <string name="ip_">IP：</string>
    <string name="add_device">添加设备</string>
    <string name="local_connection">本地连接</string>
    <string name="no_connection">无网络连接</string>
    <string name="pls_input_device_ip">请输入设备的IP地址</string>
    <string name="ip_addr">IP地址</string>
    <string name="user_login">用户登录</string>
    <string name="show_pwd">显示密码</string>
    <string name="ip_err_tips">您输入的IP地址格式错误，请重新输入</string>
    <string name="devices_has_added">设备已添加</string>
    <string name="username_pwd_err">用户名或密码输入错误，请重新输入</string>
    <string name="login_succ">登录成功</string>
    <string name="loading_tips">正在努力加载中，稍等一下…</string>
    <string name="no_file_sharing_tips">未发现该设备共享的文件</string>
    <string name="device_login_failed">无法访问该设备</string>
    
</resources>
