<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_225px"
        android:paddingTop="@dimen/dimen_60px" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/user_login"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_40px" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="@dimen/dimen_680px"
            android:layout_height="@dimen/dimen_80px"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_80px"
            android:background="@drawable/youxian_txt"
            android:gravity="start|center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/dimen_32px"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px"
            android:inputType="text"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_80px"
            android:layout_alignBottom="@id/et_username"
            android:layout_marginRight="@dimen/dimen_24px"
            android:layout_toStartOf="@id/et_username"
            android:gravity="center_vertical"
            android:text="@string/str_username"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="@dimen/dimen_680px"
            android:layout_height="@dimen/dimen_80px"
            android:layout_below="@id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_40px"
            android:background="@drawable/youxian_txt"
            android:gravity="start|center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/dimen_32px"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px" 
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_80px"
            android:layout_alignBottom="@id/et_pwd"
            android:layout_marginRight="@dimen/dimen_24px"
            android:layout_toStartOf="@id/et_pwd"
            android:gravity="center_vertical"
            android:text="@string/str_pwd"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px" />

        <CheckBox
            android:id="@+id/cb_show_pwd"
            style="@style/cb_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_36px"
            android:layout_alignStart="@id/et_pwd"
            android:layout_below="@id/et_pwd"
            android:layout_marginTop="@dimen/dimen_24px"
            android:layout_marginStart="@dimen/dimen_8px"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_24px"
            android:text="@string/show_pwd"
            android:textSize="@dimen/fontsize_27px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_88px"
            android:layout_below="@id/cb_show_pwd"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_44px"
            android:layout_marginTop="@dimen/dimen_48px"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/dimen_336px"
                android:layout_height="match_parent"
                android:background="@drawable/btn2_normal"
                android:text="@string/str_confirm"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36px"
                android:paddingBottom="@dimen/dimen_15px"
                 />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/dimen_336px"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_24px"
                android:background="@drawable/btn2_normal"
                android:text="@string/str_cancel"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36px"
                android:paddingBottom="@dimen/dimen_15px"
                 />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>