<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_300px"
        android:paddingTop="@dimen/dimen_60px" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pls_input_device_ip"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_40px" />

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="@dimen/dimen_680px"
            android:layout_height="@dimen/dimen_80px"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_80px"
            android:background="@drawable/youxian_txt"
            android:gravity="start|center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/dimen_32px"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_80px"
            android:layout_alignBottom="@id/et_ip"
            android:layout_marginRight="@dimen/dimen_24px"
            android:layout_toStartOf="@id/et_ip"
            android:gravity="center_vertical"
            android:text="@string/ip_addr"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_88px"
            android:layout_below="@id/et_ip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_44px"
            android:layout_marginTop="@dimen/dimen_80px"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/dimen_336px"
                android:layout_height="match_parent"
                android:background="@drawable/btn2_normal"
                android:paddingBottom="@dimen/dimen_15px"
                android:text="@string/str_confirm"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36px" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/dimen_336px"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_24px"
                android:background="@drawable/btn2_normal"
                android:paddingBottom="@dimen/dimen_15px"
                android:text="@string/str_cancel"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36px" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>