<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:text="@string/username"
                    android:textSize="@dimen/px50"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/re_username"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="@dimen/px50" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:text="@string/password"
                    android:textSize="@dimen/px50"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/re_password"
                    android:nextFocusDown="@+id/re_use_anonymous"
                    android:password="true"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="@dimen/px50" />
            </TableRow>

            <!--
            <TableRow>
                <TextView />
                <CheckBox android:id="@+id/re_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_save" />
            </TableRow>
            -->
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/re_use_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:layout_marginLeft="50dp"
                android:text="@string/anonymous"
                android:textSize="@dimen/px50" />
        </LinearLayout>
        <!--
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/login" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/network_location_ok" />
            <Button android:id="@+id/cancel" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/network_location_cancel" />
        </LinearLayout>
        -->
    </LinearLayout>

</ScrollView>